--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ p{
 
 #score1{
     color: #fff;
+    background-color: #000;
 }
 #score2{
     color:#fff;
+    background-color: #000;
 }
 .main{
     margin: 10px;
